--- a/api_demos/assets/css/style.css
+++ b/api_demos/assets/css/style.css
@@ -29,12 +29,6 @@ body, input {
     padding: 2.5% 0;
 }
 
-.clearfix::after {
-    content: "";
-    display: block;
-    clear  : both;
-}
-
 h1 {
     color         : var(--color-dark-blue);
     font-family   : "Shadows Into Light", cursive;
@@ -43,7 +37,7 @@ h1 {
     letter-spacing: 0.08em;
     text-align    : center;
 
-    margin-bottom : 0.65em;
+    margin-bottom : 0.85em;
 }
 
 h2 {
@@ -62,102 +56,6 @@ p {
     margin-bottom : 3%;
 }
 
-
-/* Page selection */
-#schedule, #search {
-    margin-bottom: 2.5em;
-}
-
-.leftPane {
-    float: left;
-    width: 48%;
-}
-
-.rightPane {
-    float: right;
-    width: 48%;
-}
-
-
-/* Table */
-table {
-    width: 100%;
-}
-
-tr:nth-child(even) {
-    background-color: var(--color-text-contrast);
-}
-
-tr:nth-child(odd) {
-    background-color: var(--color-light-brown);
-}
-
-th {
-    background-color: var(--color-dark-blue);
-    color           : var(--color-text-contrast);
-    
-    width           : 18%;
-    padding         : 2% 1%;
-    border-right    : 1px solid var(--color-text-contrast);
-    border-bottom   : 2px solid var(--color-text-contrast);
-}
-
-th:last-child {
-    border-right: none;
-}
-
-td {
-    font-size       : 0.9em;
-    width           : 18%;
-    padding         : 1.25% 1%;
-    border-right    : 1px solid var(--color-text-contrast);
-}
-
-td:last-child {
-    border-right: none;
-}
-
-
-/* Submission */
-label {
-    display      : block;
-    margin-bottom: 0.5em;
-}
-
-input {
-    background-color: white;
-    
-    display         : block;
-    width           : 94%;
-    padding         : 2% 3%;
-    margin-bottom   : 1em;
-}
-
-#button_add, #button_delete, #button_edit {
-    background-color: var(--color-light-blue);
-    color           : var(--color-text-contrast);
-    font-family     : "Quicksand", sans-serif;
-    font-size       : 1.15em;
-    font-weight     : bold;
-    letter-spacing  : 0.03em;
-    text-align      : center;
-
-    margin-top      : 3%;
-    border          : 4px solid var(--color-dark-blue);
-    padding         : 2% 5%;
-}
-
-#button_add {
-    float: right;
-}
-
-#button_delete {
-    display: none;
-    float  : right;
-}
-
-#button_edit {
-    display    : none;
-    float      : right;
-    margin-left: 4%;
+.panel {
+    margin-bottom: 7%;
 }
