--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ flex-direction: row;
     
   
   
-}
+
 .team-block2{
 order:2;
 flex: 0 1 auto;
@@ -148,3 +148,21 @@ min-height: 50px;
    
     
 }
+.container{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-column-gap: 1em;
+    margin-top: 4em;
+}
+
+
+.subContainer{
+    display: grid;
+    grid-row-gap: 1em;
+    background:#eee;
+}
+.listItem{
+    border-bottom: medium solid black;
+}
+
+
