--- a/api_demos/assets/css/style.css
+++ b/api_demos/assets/css/style.css
@@ -8,8 +8,10 @@
 :root {
     /* Define color scheme */
     --color-background    : #f0f2f0;
+    --color-light-brown   : #ebd9a3;
     --color-dark-blue     : #3773a8;
     --color-text          : #202020;
+    --color-text-contrast : #f9f6e3;
     --color-text-highlight: #ff6600;
 }
 
@@ -24,6 +26,10 @@ body {
     width  : 840px;
     margin : auto;
     padding: 2.5% 0;
+}
+
+.panel {
+    margin-bottom: 7%;
 }
 
 h1 {
@@ -59,6 +65,49 @@ p {
     margin-bottom : 3%;
 }
 
-.panel {
-    margin-bottom: 7%;
+strong {
+    font-weight: bold;
+}
+
+/* Table */
+table {
+    width: 100%;
+}
+
+tr:nth-child(even) {
+    background-color: var(--color-text-contrast);
+}
+
+tr:nth-child(odd) {
+    background-color: var(--color-light-brown);
+}
+
+th {
+    background-color: var(--color-dark-blue);
+    color           : var(--color-text-contrast);
+    
+    width           : 15%;
+    padding         : 2% 1%;
+    border-right    : 1px solid var(--color-text-contrast);
+    border-bottom   : 2px solid var(--color-text-contrast);
+}
+
+th:last-child {
+    border-right: none;
+}
+
+td {
+    font-size       : 0.9em;
+    width           : 15%;
+    padding         : 1.25% 1%;
+    border-right    : 1px solid var(--color-text-contrast);
+}
+
+td img {
+    width : 100px;
+    height: 100px;
+}
+
+td:last-child {
+    border-right: none;
 }
