refactored make_recommendations.html code

--- a/api_demos/assets/css/style.css
+++ b/api_demos/assets/css/style.css
@@ -9,6 +9,7 @@
     /* Define color scheme */
     --color-background    : #f0f2f0;
     --color-light-brown   : #ebd9a3;
+    --color-light-blue    : #78b6ed;
     --color-dark-blue     : #3773a8;
     --color-text          : #202020;
     --color-text-contrast : #f9f6e3;
