--- a/api_demos/assets/css/style.css
+++ b/api_demos/assets/css/style.css
@@ -112,3 +112,20 @@ td img {
 td:last-child {
     border-right: none;
 }
+
+/* Form */
+label {
+    display      : block;
+    margin-top   : 2em;
+    margin-bottom: 1em;
+}
+
+input {
+    background-color: white;
+    font-size       : 1em;
+    
+    display         : block;
+    width           : 94%;
+    padding         : 2% 3%;
+    margin-bottom   : 2em;
+}
