--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,188 +1,210 @@
-/* this is our bakground so that it will stay still until throughout our html page */
 body {
-    background: url("http://galvanize-wp.s3.amazonaws.com/wp-content/uploads/2015/08/12154910/atx-pano.jpg") no-repeat center center fixed;
+    background             : url("../images/background.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-color: #333;
-    text-align: center;
-    margin: 0;
+    -moz-background-size   : cover;
+    -o-background-size     : cover;
+    background-size        : cover;
+    background-color       : #333;
+    text-align             : center;
+
+    width  : 100%;
+    margin : 0;
     padding: 0;
-    width: 100%;
-}
-/* this adds animation to the h1 elements the changing colors animation name is used in the @keyframes as a sort of call function */
-h1 {
-    font-family:"Arvo";
-    font-weight:normal;
-    font-size: 100px;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    -webkit-animation-name: font; /* Safari 4.0 - 8.0 */
-    -webkit-animation-duration: 5s; /* Safari 4.0 - 8.0 */
-    animation-name: font;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
 }
 
-@keyframes font {
-    0%   {color: #5bfe35;}
-    25%  {color: #35fec8;}
-    50%  {color: #35a9fe;}
-    100% {color: #e135fe;}
+h1 {
+    font-family: "Arvo";
+    font-size  : 100px;
+    font-weight: normal;
+    text-align : center;
+    
+    margin : 0;
+    padding: 0;
+
+    -webkit-animation-name    : rainbow; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 6s;
+    animation-name            : rainbow;
+    animation-duration        : 6s;
+    animation-iteration-count : infinite;
+}
+
+@keyframes rainbow {
+    0%   { color: #97E649; }
+    16%  { color: #35fec8; }
+    33%  { color: #35a9fe; }
+    49%  { color: #e135fe; }
+    66%  { color: #FE6C52; }
+    82%  { color: #F4EE44; }
+    100% { color: #97E649; }
 } 
+
 /* changes the size and text alignment of h2 elements */
-h2{
-    font-size:40px;
+h2 {
+    font-size : 40px;
     text-align: center;
 }
-/* we used a simple background function to change the background opacity without affecting the rest of the elements within the jumbotron */
-.jumbotron{
-    background: rgba(255,255,255, .6);
+
+p {
+    font-size  : 20px;
+    font-weight: bold;
+}
+
+
+/* Page 0: Modal */
+.locall_menuItems {
+    margin-left: 599px;
+}
+
+.locall_modal {
+    float       : right;
+    margin-right: 55px;
+}
+
+/* this is was used to make the modal signin and register to separate and the other two classes are so our buttons dont look all smooshed together*/
+.locall_act {
+    margin-right: 30px;
+    margin-left : 30px;
+}
+
+
+/* Page 1: Main */
+.jumbotron {
+    background: rgba(255, 255, 255, 0.6);
     text-align: center;
     margin-top: 6em;
 }
-.page2Button{
-    font-size:20px;
-    text-align: center;
-    margin-top: 2em;
-}
 
-.heading{
+#page1 h1 {
     font-size: 90px;
 }
 
-
 #page1 a {
-    width: 178px;
-    height: 60px;
+    font-size    : 30px;
+
+    width        : 178px;
+    height       : 60px;
     margin-bottom: .5em;
-    font-size: 30px;
 }
+
+
+/* Page 2: Go Local! */
+/* this all pertains to page two and gives it stilling with flex functions and css grid */
+.locall_flex_container {
+    display                : -webkit-flex;
+    display                : flex;
+    -webkit-flex-direction : row; /* works with row or column */
+    flex-direction         : row;
+    -webkit-align-items    : center;
+    align-items            : center;
+    -webkit-justify-content: center;
+    justify-content        : center;
+    margin-top             : 3em;
+ }
+
+.button_events {
+    font-size : 20px;
+    text-align: center;
+
+    margin-top: 2em;
+}
+
+#events_eat, #events_play, #events_drink {
+/* TODO?    display       : -webkit-flex;*/
+    display       : flex;
+    flex-direction: column;
+    flex-basis    : 300px;
+}
+
+.locall_menu_events {
+    width: 270px;
+}
+
+.containerPage2 align-items: {
+    display              : grid;
+    grid-template-columns: 2fr 1fr;
+    grid-column-gap      : 0.3em;
+    margin-top           : 4em;
+    margin-left          : 7em;
+
+}
+
+.subContainer {
+    display     : grid;
+    grid-row-gap: 1em; 
+}
+
+.subContainer > div:nth-child(odd) {
+    background: rgba(220, 213, 213, 0.93);
+}
+
+.subContainer > div:nth-child(even) {
+    background: rgba(138, 232, 202, 0.93);
+}
+
+.listItem {
+    display              : grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-top          : 2em;
+    padding-bottom       : 2em;
+}
+
+
+/* Page 3: Your Dev Team */
 /* background opacity and the height and padding to make the background look similar to the jumbotron so we wouldnt have to use a jumbotron with our carousel */
-.aboutUs{
-    background: rgba(255,255,255, .6);
-    height: 428px;
-    padding: 45px 0 0 0;
-    background-size: cover;   
+.locall_carousel_container {
+    background     : rgba(255, 255, 255, 0.6);
+    background-size: cover;
+
+    height         : 428px;
+    padding        : 45px 0 0 0;
 }
-/* this is was used to make the modal signin and register to separate and the other two classes are so our buttons dont look all smooshed together*/
-.act{
-    margin-right: 40px;
-    margin-left: 40px;
-}
-.mdol{
-    float: right;
-    margin-right: 55px;
-}
-.buton{
-    margin-left: 600px;
-}
-/* these functionalities all pertain to our about us page  */
-.aboutUsPics{
-    width: 200px;
+
+.locall_team_photos {
+    width : 200px;
     height: 200px;
 }
-#us{
+
+#page3 h2 {
     font-size: 50px;
 }
 
-p{
-    font-weight: bold;
-}
-/* this all pertains to page two and gives it stilling with flex functions and css grid */
-.flexContainer {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: row; /* works with row or column */
-    flex-direction: row;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    margin-top: 3em;
- }
- #primary {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 300px;
-}
 
-#main {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 300px;
-}
-
-#secondary {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 300px;
-}
-
-#sea{
-    display:flex;
-    flex-direction: column;
-    flex-basis: 300px;
-}
-.containerPage2{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-column-gap: 0.3em;
-    margin-top: 4em;
-    margin-left: 7em;
-
-}
-
-.subContainer{
-    display: grid;
-    grid-row-gap: 1em; 
-}
-.subContainer > div:nth-child(odd){
-    background: rgba(220, 213, 213, 0.93);
-}
-.subContainer > div:nth-child(even){
-    background: rgba(238, 232, 232, 0.93);
-}
-.listItem{
-    display: grid;
-    grid-template-columns:  1fr 1fr 1fr;
-    padding-top: 2em;
-    padding-bottom: 2em;
-}
-/* this styles the web app fo media with screens smaller than 667px width */
-@media (max-width: 667px) 
-    { 
-        .containerPage2{
-            grid-template-columns: 1fr;
-            margin-left: 0;
-            grid-row-gap: 2em;
+/* Mobile */
+@media all and (max-width: 660px), all and (max-device-width: 660px) {
+    .containerPage2 {
+        grid-template-columns: 1fr;
+        grid-row-gap         : 2em;
         
-        }
-        .flexContainer{
-            margin-top: 0;
-        }
-        .listItem{
-            grid-template-columns: 1fr 2fr;
-            grid-gap: 1em;
-        }
-        
-        h1{
-            font-size: 50px;
-        }
-        .mdol{
-            float:initial;
-            margin-right: 0;
-        }
-        .buton{
-            margin-left: 0;
-        }
-        #us{
-            font-size:30px;
-        }
-        .softWare{
-           font-size: 20px;
-        }
-        
+        margin-left: 0;
+    }
+
+    .flexContainer {
+        margin-top: 0;
+    }
+
+    .listItem {
+        grid-template-columns: 1fr 2fr;
+        grid-gap             : 1em;
+    }
+    
+    h1 {
+        font-size: 50px;
+    }
+
+    .locall_modal {
+        float       : initial;
+        margin-right: 0;
+    }
+
+    .locall_menuItems {
+        margin-left: 0;
+    }
+
+    #page3 h2 {
+        font-size: 30px;
+    }
+
+    #page3 h3 {
+       font-size: 20px;
+    }
 }
