--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,20 @@ p {
 #page3 h3 {
     margin-bottom: 4%;
 }
+.containerPage5 align-items {
+    display              : grid;
+    grid-template-columns: 1fr;
+    margin-top           : 4em;
+    margin-left          : 7em;
 
+}
+.containerPage4 align-items {
+    display              : grid;
+    grid-template-columns: 1fr;
+    margin-top           : 4em;
+    margin-left          : 7em;
+
+}
 
 /* Mobile */
 @media all and (max-width: 660px), all and (max-device-width: 660px) {
@@ -234,3 +247,4 @@ p {
        font-size: 20px;
     }
 }
+
