--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ p {
     width: 270px;
 }
 
-.containerPage2 align-items {
+.containerPage2 {
     display              : grid;
     grid-template-columns: 2fr 1fr;
     grid-column-gap      : 0.3em;
@@ -155,13 +155,16 @@ p {
     grid-row-gap: 1em; 
 }
 
-.subContainer > div:nth-child(odd) {
+.food {
     background: rgba(220, 213, 213, 0.93);
 }
-
-.subContainer > div:nth-child(even) {
-    background: rgba(138, 232, 202, 0.93);
+.drink {
+    background: rgba(221, 28, 28, 0.93);
 }
+.play {
+    background: rgba(39, 18, 186, 0.96);
+}
+
 
 .listItem {
     display              : grid;
