--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@ body {
     background-size        : cover;
     background-color       : #333;
 
-    font-family: "Kalam", cursive;
-    font-size  : 25px;
+    font-family: "Arvo", sans-serif;
+    font-size  : 20px;
     text-align : center;
 
     width  : 100%;
@@ -141,32 +141,32 @@ p {
     display              : grid;
     grid-template-columns: 2fr 1fr;
     grid-column-gap      : 0.3em;
-    margin-top           : 4em;
-    margin-left          : 7em;
+    margin-top: 2.6em;
+
 }
 
 .subContainer {
     display     : grid;
-    grid-row-gap: 1em;
+    grid-row-gap: .5em;
+    margin-left: 5em;
 }
-
-.food {
+.restaurantImage {
     background: rgba(220, 213, 213, 0.93);
 }
 
-.drink {
-    background: rgba(221,  28,  28, 0.93);
-}
+.restaurantAddress {
+    background: rgba(220, 213, 213, 0.93);
+} 
 
-.play {
-    background: rgba( 39,  18, 186, 0.96);
+.columnTwo {
+    background:  rgba(196, 188, 188, 0.93);
 }
 
 .listItem {
     display              : grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding-top          : 2em;
-    padding-bottom       : 2em;
+    padding-bottom       : .5em;
+    padding-top     : .5em;
 }
 
 /* IMPORTANT: Set the map height explicitly */
@@ -175,6 +175,7 @@ p {
     position: fixed !important;
     width   : 400px;
     height  : 400px;
+    margin-top: .5em;
 }
 
 
