added media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ p {
 /* IMPORTANT: Set the map height explicitly */
 #map {
     /* Allow Google Maps to always appear on the screen */
-    position: fixed !important;
+    position: fixed ;
     width   : 400px;
     height  : 400px;
     margin-top: .5em;
@@ -217,23 +217,26 @@ p {
 }
 
 /* Mobile */
-@media all and (max-width: 660px), all and (max-device-width: 660px) {
+@media (max-width: 660px) {
     .listItem {
-        grid-template-columns: 1fr 2fr;
-        grid-gap             : 1em;
+        grid-template-columns: 1fr;
+        grid-gap             : 0;
+    }
+    .subContainer{
+        margin-right: 3.3em;
+        border-bottom: solid #DFCE80;
+        grid-template-columns: 1fr;
     }
 
     h1 {
-        font-size: 50px;
+        font-size: 30px;
     }
 
     .locall_menuItems {
         margin-left: 0;
     }
 
-    #page2 {
-        position: normal;
-    }
+
 
     .flexContainer {
         margin-top: 0;
@@ -241,14 +244,11 @@ p {
 
     .containerPage2 {
         grid-template-columns: 1fr;
-        grid-row-gap         : 2em;
+        grid-row-gap: 0;
 
         margin-left: 0;
     }
 
-    #map {
-        position: normal;
-    }
 
     #page3 h2 {
         font-size: 30px;
@@ -256,5 +256,11 @@ p {
 
     #page3 h3 {
         font-size: 20px;
+    }
+    #map{
+        position: static;
+        width   : 300px;
+        height  : 300px;
+        margin-left: 4em;
     }
 }
