--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,15 +178,16 @@ p {
     color: black;
 }
 .carousel-control-prev-icon {
-    background-image : url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+    background-image : url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.51.5-1.5z'/%3E%3C/svg%3E");
     color: black;
 }
+
 .carousel-indicators li{
     background-color: black;
-    }
-    .carousel-indicators .active{
-        background-color:black;
-    }
+}
+.carousel-indicators .active{
+    background-color:black;
+}
 .carousel {
     background: rgba(255, 255, 255, 0);
     width     : 800px;
