--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ h1 {
     100% { color: #97E649; }
 } 
 
-h2, h3 {
+h2, h3, h4 {
     font-weight: bold;
     text-align : center;
 }
@@ -58,6 +58,10 @@ p {
     font-size  : 1.2em;
     font-weight: bold;
     margin-bottom: 30px;
+}
+
+h4{
+    margin-bottom: 1em;
 }
 
 
